[package]
name = "stateful-wasm-demo"
version = "0.1.0"
authors = ["Kane Swartz<kaneswartz@google.com>"]
description = "a demo to show persistent state in Rust WASM"
license = "MIT"
repository = "https://github.com/JavaRip/stateful-wasm-demo"
edition = "2023"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
